# rust-aws-lambda-cdk-stack

./: .gitignore  Cargo.toml  Dockerfile  README.md  cdk.json  package.json  rust-build.sh  tsconfig.json
deploy/: stack.ts
deploy/lib/: lambda-stack.ts
src/: lib.rs
