[package]
name = "aws-rust-lambda-cdk-stack"
version = "0.1.0"
license = "MIT"

[[bin]]
name = "bootstrap"
path = "src/bin/bootstrap.rs"

[dependencies]
lambda_http = { git = "https://github.com/awslabs/aws-lambda-rust-runtime.git" }
lambda_runtime = "0.3.0"
serde = "1.0.126"
serde_derive = "1.0.126"
serde_json = "1.0.64"
tokio = "1.9.0"
